[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/PlayerJoiningPanel.gd" type="Script" id=1]
[ext_resource path="res://ui/avatars/blank_man.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/ui/MediumElement.gd" type="Script" id=3]
[ext_resource path="res://scripts/ui/SmallElement.gd" type="Script" id=4]
[ext_resource path="res://scripts/ui/HelpElement.gd" type="Script" id=5]
[ext_resource path="res://ui/flags/russia.jpg" type="Texture" id=6]
[ext_resource path="res://ui/buttons/accept.png" type="Texture" id=7]
[ext_resource path="res://scripts/ui/Widget.gd" type="Script" id=8]
[ext_resource path="res://ui/buttons/close.png" type="Texture" id=9]

[node name="PlayerJoiningDialog" type="PopupPanel" groups=[
"player_panel",
]]
self_modulate = Color( 1, 1, 1, 0.941176 )
margin_right = 230.0
rect_min_size = Vector2( 700, 0 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 696.0
margin_bottom = 467.0
custom_constants/separation = 15
alignment = 1

[node name="Offset" type="ReferenceRect" parent="VBoxContainer"]
margin_right = 692.0
size_flags_vertical = 3

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 15.0
margin_right = 692.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MP_JOINING"
align = 1
valign = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 692.0
margin_bottom = 48.0

[node name="AvatarImage" type="TextureRect" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 692.0
margin_bottom = 213.0
rect_min_size = Vector2( 150, 150 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="Name" type="Label" parent="VBoxContainer"]
margin_top = 228.0
margin_right = 692.0
margin_bottom = 242.0
text = "Chaosus"
align = 1
script = ExtResource( 3 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 257.0
margin_right = 692.0
margin_bottom = 261.0

[node name="RankBox" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 276.0
margin_right = 692.0
margin_bottom = 290.0
custom_constants/separation = 0

[node name="Offset" type="ReferenceRect" parent="VBoxContainer/RankBox"]
margin_right = 15.0
margin_bottom = 14.0
rect_min_size = Vector2( 15, 0 )

[node name="RankDesc" type="Label" parent="VBoxContainer/RankBox"]
margin_left = 15.0
margin_right = 95.0
margin_bottom = 14.0
text = "LABEL_RANK"
align = 3
script = ExtResource( 4 )

[node name="Offset2" type="ReferenceRect" parent="VBoxContainer/RankBox"]
margin_left = 95.0
margin_right = 103.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )

[node name="Rank" type="Label" parent="VBoxContainer/RankBox"]
margin_left = 103.0
margin_right = 145.0
margin_bottom = 14.0
text = "1-DAN"
script = ExtResource( 4 )

[node name="Offset3" type="ReferenceRect" parent="VBoxContainer/RankBox"]
margin_left = 145.0
margin_right = 568.0
margin_bottom = 14.0
rect_min_size = Vector2( 15, 0 )
size_flags_horizontal = 3

[node name="RatingPointsDesc" type="Label" parent="VBoxContainer/RankBox"]
margin_left = 568.0
margin_right = 661.0
margin_bottom = 14.0
text = "LABEL_POINTS"
align = 1
script = ExtResource( 4 )

[node name="Offset4" type="ReferenceRect" parent="VBoxContainer/RankBox"]
margin_left = 661.0
margin_right = 669.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )

[node name="RatingPoints" type="Label" parent="VBoxContainer/RankBox"]
margin_left = 669.0
margin_right = 677.0
margin_bottom = 14.0
text = "0"
script = ExtResource( 4 )

[node name="Offset5" type="ReferenceRect" parent="VBoxContainer/RankBox"]
margin_left = 677.0
margin_right = 692.0
margin_bottom = 14.0
rect_min_size = Vector2( 15, 0 )

[node name="StatsBox" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 305.0
margin_right = 692.0
margin_bottom = 319.0
custom_constants/separation = 0

[node name="Offset" type="ReferenceRect" parent="VBoxContainer/StatsBox"]
margin_right = 15.0
margin_bottom = 14.0
rect_min_size = Vector2( 15, 0 )

[node name="StatsDesc" type="Label" parent="VBoxContainer/StatsBox"]
margin_left = 15.0
margin_right = 97.0
margin_bottom = 14.0
text = "LABEL_STATS"
align = 3
script = ExtResource( 4 )

[node name="Offset2" type="ReferenceRect" parent="VBoxContainer/StatsBox"]
margin_left = 97.0
margin_right = 190.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )
size_flags_horizontal = 3

[node name="WinCount" type="Label" parent="VBoxContainer/StatsBox"]
margin_left = 190.0
margin_right = 198.0
margin_bottom = 14.0
mouse_filter = 0
text = "0"
script = ExtResource( 5 )
tooltip_enabled = true
tooltip_align = 1
tooltip = "LABEL_WINS2"

[node name="Offset3" type="ReferenceRect" parent="VBoxContainer/StatsBox"]
margin_left = 198.0
margin_right = 291.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )
size_flags_horizontal = 3

[node name="Div" type="Label" parent="VBoxContainer/StatsBox"]
margin_left = 291.0
margin_right = 296.0
margin_bottom = 14.0
mouse_filter = 0
text = "/"

[node name="Offset6" type="ReferenceRect" parent="VBoxContainer/StatsBox"]
margin_left = 296.0
margin_right = 389.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )
size_flags_horizontal = 3

[node name="LoseCount" type="Label" parent="VBoxContainer/StatsBox"]
margin_left = 389.0
margin_right = 397.0
margin_bottom = 14.0
mouse_filter = 0
text = "0"
script = ExtResource( 5 )
tooltip_enabled = true
tooltip_align = 1
tooltip = "LABEL_LOSES2"

[node name="Offset4" type="ReferenceRect" parent="VBoxContainer/StatsBox"]
margin_left = 397.0
margin_right = 490.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )
size_flags_horizontal = 3

[node name="Div2" type="Label" parent="VBoxContainer/StatsBox"]
margin_left = 490.0
margin_right = 495.0
margin_bottom = 14.0
mouse_filter = 0
text = "-"

[node name="Offset7" type="ReferenceRect" parent="VBoxContainer/StatsBox"]
margin_left = 495.0
margin_right = 588.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )
size_flags_horizontal = 3

[node name="DrawCount" type="Label" parent="VBoxContainer/StatsBox"]
margin_left = 588.0
margin_right = 596.0
margin_bottom = 14.0
mouse_filter = 0
text = "0"
script = ExtResource( 5 )
tooltip_enabled = true
tooltip_align = 1
tooltip = "LABEL_DRAWS2"

[node name="Offset5" type="ReferenceRect" parent="VBoxContainer/StatsBox"]
margin_left = 596.0
margin_right = 692.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )
size_flags_horizontal = 3

[node name="RatingBox" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
visible = false
margin_top = 302.0
margin_right = 284.0
margin_bottom = 302.0
custom_constants/separation = 0

[node name="Offset" type="ReferenceRect" parent="VBoxContainer/RatingBox"]
margin_right = 15.0
rect_min_size = Vector2( 15, 0 )

[node name="CountryBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 334.0
margin_right = 692.0
margin_bottom = 366.0
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="Offset" type="ReferenceRect" parent="VBoxContainer/CountryBox"]
margin_right = 15.0
margin_bottom = 32.0
rect_min_size = Vector2( 15, 0 )

[node name="Country" type="Label" parent="VBoxContainer/CountryBox"]
margin_left = 15.0
margin_top = 9.0
margin_right = 121.0
margin_bottom = 23.0
text = "LABEL_COUNTRY"
script = ExtResource( 4 )

[node name="Offset2" type="ReferenceRect" parent="VBoxContainer/CountryBox"]
margin_left = 121.0
margin_right = 129.0
margin_bottom = 32.0
rect_min_size = Vector2( 8, 0 )

[node name="CountryIcon" type="TextureButton" parent="VBoxContainer/CountryBox"]
margin_left = 129.0
margin_right = 193.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
texture_normal = ExtResource( 6 )
expand = true
script = ExtResource( 5 )
tooltip_enabled = true
tooltip = "CY_UNKNOWN"

[node name="Offset3" type="ReferenceRect" parent="VBoxContainer/CountryBox"]
margin_left = 193.0
margin_right = 692.0
margin_bottom = 32.0
rect_min_size = Vector2( 15, 0 )
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 381.0
margin_right = 692.0
margin_bottom = 385.0

[node name="ActionsBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 400.0
margin_right = 692.0
margin_bottom = 448.0
alignment = 1

[node name="Offset" type="ReferenceRect" parent="VBoxContainer/ActionsBox"]
margin_right = 15.0
margin_bottom = 48.0
rect_min_size = Vector2( 15, 0 )

[node name="AcceptButton" type="TextureButton" parent="VBoxContainer/ActionsBox"]
margin_left = 19.0
margin_right = 67.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5
script = ExtResource( 8 )
unnamed = true

[node name="Offset3" type="ReferenceRect" parent="VBoxContainer/ActionsBox"]
margin_left = 71.0
margin_right = 251.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/ActionsBox"]
margin_left = 255.0
margin_right = 435.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "MP_ACCEPT"
align = 1
valign = 1

[node name="Timer" type="Label" parent="VBoxContainer/ActionsBox"]
margin_left = 439.0
margin_top = 17.0
margin_right = 619.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "(20)"
valign = 1

[node name="ReferenceRect" type="ReferenceRect" parent="VBoxContainer/ActionsBox"]
visible = false
margin_left = 56.0
margin_right = 164.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="DeclineButton" type="TextureButton" parent="VBoxContainer/ActionsBox"]
margin_left = 623.0
margin_right = 671.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5
script = ExtResource( 8 )
unnamed = true

[node name="Offset2" type="ReferenceRect" parent="VBoxContainer/ActionsBox"]
margin_left = 675.0
margin_right = 690.0
margin_bottom = 48.0
rect_min_size = Vector2( 15, 0 )

[node name="Offset2" type="ReferenceRect" parent="VBoxContainer"]
margin_top = 463.0
margin_right = 692.0
margin_bottom = 463.0

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="VBoxContainer/ActionsBox/AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ActionsBox/DeclineButton" to="." method="_on_DeclineButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
